<resources>
    <string name="app_name" translatable="false">47 Days</string>
    <string name="englishLanguageButton" translatable="false">ENGLISH</string>
    <string name="russianLanguageButton" translatable="false">РУССКИЙ</string>
    <string name="ukrainianLanguageButton" translatable="false">УКРАЇНСЬКА</string>

    <string name="disclaimer1">Warning!</string>
    <string name="disclaimer2">Each of your decisions affects the plot.</string>
    <string name="disclaimer3">Make the choice wisely!</string>
    <string name="info_about_tap">Always tap text to continue</string>
    <string name="proposeToRestart">Try to discover a different ending for yourself!</string>
    <string name="restartButton">Restart</string>
    <string name="endGameText">THE END</string>
    <string name="resume">Continue</string>
    <string name="restart">Restart</string>
    <string name="changeLanguage">Change language</string>
</resources>
