<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundBlack"
    tools:context=".activities.LanguageActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonLanguageEN"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/fontWhite"
            android:textSize="16sp"
            android:text="@string/englishLanguageButton"
            android:onClick="onClickSelectLanguage"/>

        <Button
            android:id="@+id/buttonLanguageRU"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/fontWhite"
            android:textSize="16sp"
            android:text="@string/russianLanguageButton"
            android:onClick="onClickSelectLanguage"/>

        <Button
            android:id="@+id/buttonLanguageUK"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/fontWhite"
            android:textSize="16sp"
            android:text="@string/ukrainianLanguageButton"
            android:onClick="onClickSelectLanguage"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>