<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundBlack"
    tools:context=".activities.EndGameActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/textViewEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:textColor="@color/fontWhite"
            android:textAlignment="center"
            android:textSize="28sp"
            android:text="@string/endGameText" />

        <Button
            android:id="@+id/buttonRestart"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/fontWhite"
            android:textSize="16sp"
            android:text="@string/restartButton"
            android:onClick="onClickRestart"/>

        <TextView
            android:id="@+id/textViewPropose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/fontLightGrey"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:textAlignment="center"
            android:textSize="16sp"
            android:text="@string/proposeToRestart" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>