<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundBlack"
    tools:context=".activities.SettingsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/buttonContinue"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@drawable/settings_button"
            android:fontFamily="@font/regular"
            android:onClick="onClickResume"
            android:text="@string/resume"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttonRestart"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/settings_button"
            android:fontFamily="@font/regular"
            android:onClick="onClickRestart"
            android:text="@string/restart"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttonChangeLanguage"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/settings_button"
            android:fontFamily="@font/regular"
            android:onClick="onClickChangeLanguage"
            android:text="@string/changeLanguage"
            android:textSize="16sp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>