<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundBlack"
    tools:context=".activities.DisclaimerActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:weightSum="10"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewDisclaimer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/regular"
                android:text="@string/disclaimer1"
                android:textAlignment="center"
                android:textColor="@color/fontWhite"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textViewDisclaimer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="50dp"
                android:fontFamily="@font/regular"
                android:text="@string/disclaimer2"
                android:textAlignment="center"
                android:textColor="@color/fontWhite"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewDisclaimer3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="50dp"
                android:fontFamily="@font/regular"
                android:text="@string/disclaimer3"
                android:textAlignment="center"
                android:textColor="@color/fontWhite"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/regular"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/info_about_tap"
                android:textAlignment="center"
                android:textColor="@color/fontLightGrey"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>